// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-bbmXgH ibwxLn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gGBfsJ ivunXR"
    >
      <span
        class="sc-fYxtnH jGPXoR"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-itybZL lampxY"
        >
          <span
            class="SVGInline SVGInline--cleaned"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cIShpX doZfFN"
    />
    <div
      class="sc-jnlKLf QlpBx"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-jqCOkK fWvoOV disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-bbmXgH ibwxLn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gGBfsJ ivunXR"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cIShpX doZfFN"
    />
    <div
      class="sc-gzOgki bSsAdI slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-eqIVtm fVNVwW remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-fjmCvl fGEqRT"
      >
        <div
          class="sc-bRBYWo lhkqIY"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-CtfFt klkWoU"
      >
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-fjmCvl fGEqRT"
      >
        <div
          class="sc-bRBYWo lhkqIY"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-CtfFt klkWoU"
      >
        <li
          class="sc-krDsej iYMmXZ"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-bHwgHz jgEFHY"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-dTdPqK cujozA sl-bin"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-TFwJa inRgnw"
      >
        <a
          class="sc-dVhcbM gVgmjE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-bbmXgH ibwxLn"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-gGBfsJ ivunXR"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-cIShpX doZfFN"
    />
    <div
      class="sc-gzOgki bSsAdI slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-eqIVtm fVNVwW remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-fjmCvl fGEqRT"
      >
        <div
          class="sc-bRBYWo lhkqIY"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-CtfFt klkWoU"
      >
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-hGoxap ldWomB"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-eqIVtm fVNVwW remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-fjmCvl hdadTk"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-TFwJa inRgnw"
      >
        <a
          class="sc-dVhcbM gVgmjE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
